--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,15 +1,12 @@
-﻿<div class="nav-scrollable" onclick="document.querySelector('.navbar-toggler').click()">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Blogs">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Blogs
-            </NavLink>
-        </div>
-
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Projects">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Projects
-            </NavLink>
-        </div>
-    </nav>
-</div>
+﻿<MudPaper Width="250px" Class="py-3" Elevation="0">
+    <MudNavMenu Dense="true" Rounded="true" Margin="Margin.Dense" Color="Color.Secondary" Class="pa-2">
+        <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+        <MudNavLink Href="/Blogs" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LibraryBooks">Blogs</MudNavLink>
+        <MudNavLink Href="/Projects" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Build">Projects</MudNavLink>
+        <MudNavGroup Title="Settings" Expanded="true">
+            <MudNavLink Href="/users">Users</MudNavLink>
+            <MudNavLink Href="/security">Security</MudNavLink>
+        </MudNavGroup>
+        <MudNavLink Href="/About" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Person">About</MudNavLink>
+    </MudNavMenu>
+</MudPaper>
