--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -23,22 +23,8 @@
 </div>
 <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
     <MudGrid>
-        <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                <iframe style="width: 100%; height: 100%; margin: 10px; border-radius: 12px;" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpgedWjSUXJYl?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
-                <iframe style="width: calc(100% - 20px); height: calc(100% - 20px); margin: 10px;"
-                        title="Discord user embed"
-                        frameborder="0"
-                        sandbox="allow-scripts"
-                        src="https://widgets.vendicated.dev/user?id=219136857663864833&theme=dark&banner=false&full-banner=false&rounded-corners=true&discord-icon=true&badges=true&guess-nitro=false&"></iframe>
-            </MudPaper>
-        </MudItem>
-        <MudItem xs="12" sm="12" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
+        <MudItem xs="12" sm="6">
+            <FeaturedProjectsCarousel Projects="featuredProjects" />
         </MudItem>
         <MudItem xs="12" sm="6">
             <MudGrid>
@@ -50,9 +36,20 @@
                 </MudItem>
             </MudGrid>
         </MudItem>
-        <MudItem xs="12" sm="6">
-            <FeaturedProjectsCarousel Projects="featuredProjects"/>
+        <MudItem xs="12" sm="6" md="4">
+                <iframe style="width: 100%; height: 100%; border-radius: 12px; overflow: hidden;" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpgedWjSUXJYl?utm_source=generator&theme=0" frameborder="0" allowfullscreen="allowfullscreen" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </MudItem>
+        <MudItem xs="12" sm="6" md="4">
+                <iframe style="width: 100%; height: 100%;"
+                        title="Discord user embed"
+                        frameborder="0"
+                        sandbox="allow-scripts"
+                        src="https://widgets.vendicated.dev/user?id=219136857663864833&theme=dark&banner=false&full-banner=false&rounded-corners=true&discord-icon=true&badges=true&guess-nitro=false&"></iframe>
+        </MudItem>
+        <MudItem xs="12" sm="12" md="4">
+            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
+        </MudItem>
+        
         <MudItem xs="12" sm="6" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
         </MudItem>
