--- a/Components/Components/FeaturedProjectsCarousel.razor
+++ b/Components/Components/FeaturedProjectsCarousel.razor
@@ -3,15 +3,16 @@
         <MudProgressCircular Color="Color.Primary" Size="Size.Large" Indeterminate="true" />
     </div>
 } else {
-    <MudCarousel Class="mud-width-full pa-4" Elevation="2" Style="height:100%;" ShowArrows="@arrows" ShowBullets="@bullets" EnableSwipeGesture="@enableSwipeGesture" AutoCycle="@autocycle" TData="object">
+    <MudText Class="carousel-header mb-4" Typo="Typo.h3" Align="@Align.Center">Featured Projects</MudText>
+    <MudCarousel Class="mud-width-full pa-4" Elevation="2" Style="height:400px;" ShowArrows="@arrows" ShowBullets="@bullets" EnableSwipeGesture="@enableSwipeGesture" AutoCycle="@autocycle" TData="object">
         @foreach (var project in Projects)
         {
             <MudLink Href="@GetProjetHandleURL(project)">
-                <MudCarouselItem Transition="Transition" Color="@Color.Primary">
-                    <div class="d-flex justify-center" style="height:100%">
-                        <MudImage ObjectFit="ObjectFit.Contain" Fluid="true" Src="@project.FeaturedImageUrl" />
-                    </div>
-                    <MudText Align="@Align.Center" Class="mx-auto">@project.Title</MudText>
+                <MudCarouselItem Transition="Transition" Color="@Color.Inherit">
+                    <MudText Typo="Typo.h5" Align="@Align.Center" Class="mx-auto">@project.Title</MudText>
+                    <MudContainer MaxWidth="MaxWidth.Small" Class="d-flex align-content-start justify-content-center">
+                        <MudImage Width="300" Height="300" Class="rounded-lg ma-4" Elevation="10" Fluid="true" Src="@project.FeaturedImageUrl" />
+                    </MudContainer>
                 </MudCarouselItem>
             </MudLink>
         }
