--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -21,43 +21,23 @@
         </div>
     </div>
 </div>
-<MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
-    <MudGrid>
-        <MudItem xs="12" sm="6">
+<MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.Medium">
+    <MudGrid Spacing="2">
+        <MudItem xs="12">
             <FeaturedProjectsCarousel Projects="featuredProjects" />
         </MudItem>
-        <MudItem xs="12" sm="6">
-            <MudGrid>
-                <MudItem xs="12">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
-                </MudItem>
-                <MudItem xs="12">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
-                </MudItem>
-            </MudGrid>
-        </MudItem>
-        <MudItem xs="12" sm="6" md="4">
-                <iframe style="width: 100%; height: 100%; border-radius: 12px; overflow: hidden;" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpgedWjSUXJYl?utm_source=generator&theme=0" frameborder="0" allowfullscreen="allowfullscreen" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        </MudItem>
-        <MudItem xs="12" sm="6" md="4">
-                <iframe style="width: 100%; height: 100%;"
-                        title="Discord user embed"
-                        frameborder="0"
-                        sandbox="allow-scripts"
-                        src="https://widgets.vendicated.dev/user?id=219136857663864833&theme=dark&banner=false&full-banner=false&rounded-corners=true&discord-icon=true&badges=true&guess-nitro=false&"></iframe>
-        </MudItem>
-        <MudItem xs="12" sm="12" md="4">
+        <MudItem xs="16" sm="8" md="6">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
         </MudItem>
-        
-        <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
-        </MudItem>
-        <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
-        </MudItem>
-        <MudItem xs="12" sm="12" md="4">
+        <MudItem xs="16" sm="8" md="6">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
         </MudItem>
     </MudGrid>
 </MudContainer>
+
+<!-- <iframe style="width: 100%; height: 100%;"
+            title="Discord user embed"
+            frameborder="0"
+            sandbox="allow-scripts"
+        src="https://widgets.vendicated.dev/user?id=219136857663864833&theme=dark&banner=false&full-banner=false&rounded-corners=true&discord-icon=true&badges=true&guess-nitro=false&"></iframe>-->
+<!-- <iframe style="width: 100%; height: 100%; border-radius: 12px; overflow: hidden;" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpgedWjSUXJYl?utm_source=generator&theme=0" frameborder="0" allowfullscreen="allowfullscreen" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> -->
