--- a/Components/Components/FeaturedBlogCard.razor
+++ b/Components/Components/FeaturedBlogCard.razor
@@ -1,10 +1,10 @@
-﻿<MudCard>
+﻿<MudCard Elevation="15" Style="height: 400px; position: relative;">
     <MudCardMedia Image="@BlogPost.FeaturedImageUrl" Height="200" />
     <MudCardContent>
         <MudText Typo="Typo.h5">@BlogPost.Title</MudText>
-        <MudText Typo="Typo.body2">@BlogPost.Description</MudText>
+        <MudText Style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" Typo="Typo.body2">@BlogPost.Description</MudText>
     </MudCardContent>
-    <MudCardActions>
+    <MudCardActions Style="position: absolute; bottom: 0; left: 0; right: 0; padding: 8px;">
         <MudButton Href="@GetURLHandle()" Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
     </MudCardActions>
 </MudCard>
