--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -3,10 +3,7 @@
         <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
         <MudNavLink Href="/Blogs" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LibraryBooks">Blogs</MudNavLink>
         <MudNavLink Href="/Projects" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Build">Projects</MudNavLink>
-        <MudNavGroup Title="Settings" Expanded="true">
-            <MudNavLink Href="/users">Users</MudNavLink>
-            <MudNavLink Href="/security">Security</MudNavLink>
-        </MudNavGroup>
         <MudNavLink Href="/About" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Person">About</MudNavLink>
+        <MudNavLink Href="/Resume" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.ContactPage">Resume</MudNavLink>
     </MudNavMenu>
 </MudPaper>
