--- a/Components/Components/ProjectCard.razor
+++ b/Components/Components/ProjectCard.razor
@@ -1,16 +1,16 @@
-﻿<MudCard>
+﻿<MudCard Elevation="5" Style="height: 200px; position: relative;">
     <MudCardHeader>
         <CardHeaderContent>
             <MudText Typo="Typo.h6">@Project.Title</MudText>
         </CardHeaderContent>
         <CardHeaderActions>
             <MudLink Href="@Project.ProjectUrl"><MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Default" /></MudLink>
-        </CardHeaderActions>    
+        </CardHeaderActions>
     </MudCardHeader>
     <MudCardContent>
-        <MudText Typo="Typo.body2">@Project.Description</MudText>
+        <MudText Style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" Typo="Typo.body2">@Project.Description</MudText>
     </MudCardContent>
-    <MudCardActions>
+    <MudCardActions Style="position: absolute; bottom: 0; left: 0; right: 0; padding: 8px;">
         <MudButton Href="@GetURLHandle()" Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
     </MudCardActions>
 </MudCard>
