--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -12,7 +12,10 @@
             <h1 class="display-5 fw-bold lh-1 mb-3">
                 TrustyPortfolio
             </h1>
-            <p>Welcome to my portfolio!</p>
+            <MudContainer Class="mt-6">
+                <MudText Typo="Typo.h6">Welcome to my portfolio!</MudText>
+                <MudText Typo="Typo.body1">Let's build something great!</MudText>
+            </MudContainer>
         </div>
         <div class="col-12 col-lg-6">
             <img style="border-radius: 50%" src="https://res.cloudinary.com/djdtmbpce/image/upload/c_crop,g_auto,h_800,w_800/l8mrq0vrbuaugbw9vpbt.jpg"
@@ -21,23 +24,38 @@
         </div>
     </div>
 </div>
-<MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.Medium">
+<MudContainer Class="mt-16 mb-16 px-8" MaxWidth="MaxWidth.Medium">
+    <FeaturedProjectsCarousel Projects="featuredProjects" />
+</MudContainer>
+<MudContainer Class="mt-16 mb-16 px-8" MaxWidth="MaxWidth.Medium">
+    <FeaturedBlogsCarousel Blogs="featuredBlogs" />
+</MudContainer>
+<!--
+<MudContainer Class="mt-16 mb-16 px-8" MaxWidth="MaxWidth.Medium">
     <MudGrid Spacing="2">
-        <MudItem xs="12">
-            <FeaturedProjectsCarousel Projects="featuredProjects" />
+        <MudItem xs="16" sm="8" md="6">
+            <MudText Typo="Typo.h4" Align="Align.Center"> Random Blog Post</MudText>
+                @if (RandomProject == null) {
+                    <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+                } else {
+                    <BlogCard BlogPost="@RandomPost" />
+                }
         </MudItem>
         <MudItem xs="16" sm="8" md="6">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
-        </MudItem>
-        <MudItem xs="16" sm="8" md="6">
-            <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
+            <MudText Typo="Typo.h4" Align="Align.Center"> Random Project</MudText>
+            @if (RandomProject == null) {
+                <MudProgressCircular Color="Color.Primary" Indeterminate="true" />
+            } else {
+                <ProjectCard Project="@RandomProject" />
+            }
         </MudItem>
     </MudGrid>
 </MudContainer>
-
+-->
 <!-- <iframe style="width: 100%; height: 100%;"
             title="Discord user embed"
             frameborder="0"
             sandbox="allow-scripts"
         src="https://widgets.vendicated.dev/user?id=219136857663864833&theme=dark&banner=false&full-banner=false&rounded-corners=true&discord-icon=true&badges=true&guess-nitro=false&"></iframe>-->
+
 <!-- <iframe style="width: 100%; height: 100%; border-radius: 12px; overflow: hidden;" src="https://open.spotify.com/embed/playlist/37i9dQZF1EpgedWjSUXJYl?utm_source=generator&theme=0" frameborder="0" allowfullscreen="allowfullscreen" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe> -->
