Move Files, Get FilterChips Working

--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -29,7 +29,7 @@
                                  ToggledIcon="@Icons.Material.Filled.Nightlight" ToggledTitle="On" />
             <AuthorizeView>
                 <MudAvatar>
-                    <MudImage Src="https://res.cloudinary.com/djdtmbpce/image/upload/c_crop,g_auto,h_800,w_800/l8mrq0vrbuaugbw9vpbt.jpg"></MudImage>
+                    <MudImage Src=""></MudImage>
                 </MudAvatar>
             </AuthorizeView>
         </MudAppBar>
