--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,9 +1,7 @@
-﻿<MudPaper Width="250px" Class="py-3" Elevation="0">
-    <MudNavMenu Dense="true" Rounded="true" Margin="Margin.Dense" Color="Color.Secondary" Class="pa-2">
-        <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-        <MudNavLink Href="/Blogs" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LibraryBooks">Blogs</MudNavLink>
-        <MudNavLink Href="/Projects" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Build">Projects</MudNavLink>
-        <MudNavLink Href="/About" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Person">About</MudNavLink>
-        <MudNavLink Href="/Resume" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.ContactPage">Resume</MudNavLink>
-    </MudNavMenu>
-</MudPaper>
+﻿<MudNavMenu Dense="true" Rounded="true" Margin="Margin.Dense" Color="Color.Secondary" Class="pa-2">
+    <MudNavLink Href="/" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
+    <MudNavLink Href="/Blogs" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.LibraryBooks">Blogs</MudNavLink>
+    <MudNavLink Href="/Projects" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Build">Projects</MudNavLink>
+    <MudNavLink Href="/About" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Person">About</MudNavLink>
+    <MudNavLink Href="/Resume" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.ContactPage">Resume</MudNavLink>
+</MudNavMenu>
