--- a/Components/Pages/Base/Home.razor
+++ b/Components/Pages/Base/Home.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿    @page "/"
 @using TrustyPortfolio.Components.Components
 
 <PageTitle>Home</PageTitle>
@@ -9,12 +9,9 @@
 <div class="container col-xxl-8 px-4 py-5">
     <div class="row align-items-center g-5 py-5">
         <div class="col-12 col-lg-6">
-            <h1 class="display-5 fw-bold lh-1 mb-3">
-                TrustyPortfolio
-            </h1>
+            <MudText Typo="Typo.h2">Hi! My name is Ryan!</MudText>
             <MudContainer Class="mt-6">
-                <MudText Typo="Typo.h6">Welcome to my portfolio!</MudText>
-                <MudText Typo="Typo.body1">Let's build something great!</MudText>
+                <MudText Typo="Typo.h6">Welcome to my Trusty Portfolio!</MudText>
             </MudContainer>
         </div>
         <div class="col-12 col-lg-6">
