--- a/Components/Pages/Shared/ExternalLoginPicker.razor
+++ b/Components/Pages/Shared/ExternalLoginPicker.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
+@using TrustyPortfolio.Components.Account
 @using TrustyPortfolio.Models.Domain
 
 @inject SignInManager<ApplicationUser> SignInManager
