--- a/Components/Routes.razor
+++ b/Components/Routes.razor
@@ -1,5 +1,5 @@
 ﻿@using TrustyPortfolio.Components
-@using TrustyPortfolio.Components.Account.Shared
+@using TrustyPortfolio.Components.Pages.Shared
 <Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)">
