--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using TrustyPortfolio.Models.Domain
 @using TrustyPortfolio.Repositories
 @using Microsoft.AspNetCore.Components.Authorization
+@using TrustyPortfolio.Components.Account
