--- a/Components/Components/BlogIndex.razor
+++ b/Components/Components/BlogIndex.razor
@@ -1,10 +1,15 @@
 ﻿@page "/Blogs/{UrlHandle}"
 
-<h3>Blog Index</h3>
-
 @if (BlogPost == null) {
     <MudProgressLinear Color="Color.Primary" Indeterminate="true" Class="my-7" />
 } else {
-    <h1>@BlogPost.Title</h1>
-    <h3>@BlogPost.Description</h3>
+    <MudContainer>
+        <MudText Align="Align.Center" Typo="Typo.h1">@BlogPost.Title</MudText>
+    </MudContainer>
+    <MudContainer MaxWidth="MaxWidth.Medium">
+        <MudText Align="Align.Center" Typo="Typo.h6">@BlogPost.Description</MudText>
+        <MudContainer>
+            @BlogPost.Content
+        </MudContainer>
+    </MudContainer>
 }
