--- a/Components/Pages/Base/BlogList.razor
+++ b/Components/Pages/Base/BlogList.razor
@@ -2,15 +2,14 @@
 @using TrustyPortfolio.Components.Components
 
 <MudContainer Class="d-flex flex-wrap justify-content-center align-items-center" MaxWidth="MaxWidth.ExtraLarge">
-    @if (!featuredBlogs.Any() && !blogs.Any()) {
+    @if (!PortfolioData.FeaturedBlogs.Any() && !PortfolioData.Blogs.Any()) {
         <MudProgressCircular Color="Color.Primary" Style="height:35%;width:35%;" Indeterminate="true" />
     } else {
-        @foreach (var blog in featuredBlogs) {
+        @foreach (var blog in PortfolioData.FeaturedBlogs) {
             <MudItem lg="4" md="6" sm="12" Class="p-4">
                 <FeaturedBlogCard BlogPost="blog" />
             </MudItem>
         }
-        <BlogFilterChips BlogPosts="blogs" Tags="tags" />
+        <BlogFilterChips/>
     }
 </MudContainer>
-
