--- a/Components/Pages/Base/Home.razor
+++ b/Components/Pages/Base/Home.razor
@@ -22,10 +22,10 @@
     </div>
 </div>
 <MudContainer Class="mt-16 mb-16 px-8" MaxWidth="MaxWidth.Medium">
-    <FeaturedProjectsCarousel Projects="featuredProjects" />
+    <FeaturedProjectsCarousel Projects="PortfolioData.FeaturedProjects" />
 </MudContainer>
 <MudContainer Class="mt-16 mb-16 px-8" MaxWidth="MaxWidth.Medium">
-    <FeaturedBlogsCarousel Blogs="featuredBlogs" />
+    <FeaturedBlogsCarousel Blogs="PortfolioData.FeaturedBlogs" />
 </MudContainer>
 <!--
 <MudContainer Class="mt-16 mb-16 px-8" MaxWidth="MaxWidth.Medium">
