--- a/Components/Pages/Base/ProjectList.razor
+++ b/Components/Pages/Base/ProjectList.razor
@@ -2,15 +2,14 @@
 @using TrustyPortfolio.Components.Components
 
 <MudContainer Class="d-flex flex-wrap justify-content-center align-items-center" MaxWidth="MaxWidth.ExtraLarge">
-    @if (!featuredProjects.Any() && !projects.Any()) {
+    @if (!PortfolioData.FeaturedProjects.Any() && !PortfolioData.Projects.Any()) {
         <MudProgressCircular Color="Color.Primary" Style="height:35%;width:35%;" Indeterminate="true" />
     } else {
-        @foreach (var project in featuredProjects) {
+        @foreach (var project in PortfolioData.FeaturedProjects) {
             <MudItem lg="4" md="6" sm="12" Class="p-4">
                 <FeaturedProjectCard Project="project" />
             </MudItem>
         }
-        <ProjectFilterChips Projects="projects" Tags="tags" />
+        <ProjectFilterChips />
     }
 </MudContainer>
-
