--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -13,3 +13,4 @@
 @using TrustyPortfolio.Repositories
 @using Microsoft.AspNetCore.Components.Authorization
 @using TrustyPortfolio.Components.Account
+@using Microsoft.AspNetCore.Authorization
