--- a/Components/Components/BlogFilterChips.razor
+++ b/Components/Components/BlogFilterChips.razor
@@ -1,7 +1,7 @@
 ﻿<MudContainer>
     <MudContainer Class="my-8 d-flex justify-content-center">
         <MudChipSet @bind-SelectedChips="selected" MultiSelection="true" Filter="true">
-            @foreach (var tag in Tags) {
+            @foreach (var tag in PortfolioData.Tags) {
                 <MudChip Text="@tag.Name" Variant="Variant.Text" Color="Color.Secondary">@tag.Name</MudChip>
             }
         </MudChipSet>
@@ -9,14 +9,14 @@
 
     <MudGrid Spacing="2">
         @if (selected != null && SelectedTags.Any()) {
-            @if (BlogPosts != null && BlogPosts.Any()) {
+            @if (PortfolioData.Blogs != null && PortfolioData.Blogs.Any()) {
                 @if (!IsAnyBlogMatchingTags) {
                     <MudItem Class="mt-4" xs="12">
                         <MudText Align="Align.Center" Typo="Typo.h3">No blogs match the selected tags.</MudText>
                     </MudItem>
                 } else {
                     <MudContainer Class="d-flex flex-wrap justify-content-center">
-                        @foreach (var blogPost in BlogPosts.Where(x => x.Visible && SelectedTags.All(tag => x.Tags.Contains(tag)))) {
+                        @foreach (var blogPost in PortfolioData.Blogs.Where(x => x.Visible && SelectedTags.All(tag => x.Tags.Contains(tag)))) {
                             <MudItem lg="4" md="6" xs="12" Class="p-4">
                                 <BlogCard BlogPost="blogPost" />
                             </MudItem>
@@ -25,7 +25,7 @@
                 }
             }
         } else {
-            @foreach (var blogPost in BlogPosts.Where(x => x.Visible)) {
+            @foreach (var blogPost in PortfolioData.Blogs.Where(x => x.Visible)) {
                 <MudItem lg="4" md="6" xs="12" Class="p-4">
                     <BlogCard BlogPost="blogPost" />
                 </MudItem>
