--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -4,7 +4,7 @@
 <MudDialogProvider />
 <MudSnackbarProvider />
 
-<div class="page">
+<MudContainer Class="page">
     <MudLayout>
         <MudAppBar Elevation="1">
             <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
@@ -37,13 +37,15 @@
             <NavMenu />
         </MudDrawer>
         <MudMainContent>
-            @Body
+            <CascadingValue Value="PortfolioData">
+                @Body
+            </CascadingValue>
         </MudMainContent>
     </MudLayout>
-</div>
+</MudContainer>
 
-<div id="blazor-error-ui">
+<MudContainer id="blazor-error-ui">
     An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
-</div>
+    <MudLink Href="" Class="reload">Reload</MudLink>
+    <MudLink Class="dismiss">🗙</MudLink>
+</MudContainer>
