Show Logged In User Pfp

--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -20,4 +20,9 @@
             </MudNavGroup>
         </MudNavGroup>
     </AuthorizeView>
+    <AuthorizeView>
+        <MudNavGroup Title="Account" Expanded="true">
+            <MudNavLink Href="/Account/Manage">Settings</MudNavLink>
+        </MudNavGroup>
+    </AuthorizeView>
 </MudNavMenu>
