--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -28,10 +28,19 @@
                                  Icon="@Icons.Material.TwoTone.WbSunny" Style="@ToggledColor" Title="Off"
                                  ToggledIcon="@Icons.Material.Filled.Nightlight" ToggledTitle="On" />
             <AuthorizeView>
-                <MudAvatar>
-                    <MudImage Src=""></MudImage>
-                </MudAvatar>
+                <Authorized>
+                    <MudAvatar>
+                        @if (User != null && !string.IsNullOrEmpty(User.ProfilePictureURL)) {
+                            <MudImage Src="@User.ProfilePictureURL"></MudImage>
+                        } else {
+                            <MudImage Src="https://d3544la1u8djza.cloudfront.net/APHI/Blog/2021/07-06/small+white+fluffy+dog+smiling+at+the+camera+in+close-up-min.jpg"></MudImage>
+                        }
+                    </MudAvatar>
+                </Authorized>
+                <NotAuthorized>
+                </NotAuthorized>
             </AuthorizeView>
+
         </MudAppBar>
         <MudDrawer @bind-Open="_drawerOpen" ClipMode="DrawerClipMode.Always" Elevation="2">
             <NavMenu />
