--- a/Components/App.razor
+++ b/Components/App.razor
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="themes/prism.css" rel="stylesheet" />
     <HeadOutlet @rendermode="RenderModeForPage" />
 </head>
 
@@ -21,6 +22,7 @@
     <Routes @rendermode="RenderModeForPage" />
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_framework/blazor.web.js"></script>
+    <script src="prism.js"></script>
 </body>
 
 </html>
