--- a/Components/App.razor
+++ b/Components/App.razor
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism.min.css">
+    <link rel="stylesheet" href="/prism.css">
     <HeadOutlet @rendermode="RenderModeForPage" />
 </head>
 
@@ -22,7 +22,12 @@
     <Routes @rendermode="RenderModeForPage" />
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_framework/blazor.web.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/prism.min.js"></script>
+    <script src="/prism.js"></script>
+    <script>
+        window.highlightAll = () => {
+            Prism.highlightAll();
+        }
+    </script>
 </body>
 
 </html>
