--- a/Components/Components/FeaturedProjectCard.razor
+++ b/Components/Components/FeaturedProjectCard.razor
@@ -2,10 +2,12 @@
     <MudCardMedia Image="@Project.FeaturedImageUrl" Height="300" />
     <MudCardContent>
         <MudText Typo="Typo.h5">@Project.Title</MudText>
-        <MudText Style="overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" Typo="Typo.body2">@Project.Description</MudText>
     </MudCardContent>
     <MudCardActions Style="position: absolute; bottom: 0; left: 0; right: 0; padding: 8px;">
         <MudButton Href="@GetURLHandle()" Variant="Variant.Text" Color="Color.Primary">Read More</MudButton>
-        <MudLink Href="@Project.ProjectUrl"><MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Default" /></MudLink>
+        <MudLink Target="_blank" Href="@Project.ProjectUrl"><MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Default" /></MudLink>
+        <MudTooltip Text="@Project.Description" Color="Color.Primary" Placement="Placement.Top">
+            <MudIcon Icon="@Icons.Material.Outlined.Info" style="position: absolute; bottom: 8; right: 8;" />
+        </MudTooltip>
     </MudCardActions>
 </MudCard>
