--- a/Components/Pages/Admin/ProjectEdit.razor
+++ b/Components/Pages/Admin/ProjectEdit.razor
@@ -1,10 +1,10 @@
-﻿@page "/Admin/Projects/Edit"
+﻿@page "/Admin/Blogs/Edit"
 @attribute [Authorize(Roles = "Admin")]
 
-<MudDataGrid T="Project" MultiSelection="true" Items="PortfolioData.Projects" SortMode="SortMode.Multiple" Filterable="true" QuickFilter="@_quickFilter"
+<MudDataGrid T="BlogPost" MultiSelection="true" Items="PortfolioData.Blogs" SortMode="SortMode.Multiple" Filterable="true" QuickFilter="@_quickFilter"
              Hideable="true" RowClick="@RowClicked" RowContextMenuClick="RowRightClicked">
     <ToolBarContent>
-        <MudText Typo="Typo.h6">Projects</MudText>
+        <MudText Typo="Typo.h6">Blog Posts</MudText>
         <MudSpacer />
         <MudTextField @bind-Value="_searchString" Placeholder="Search" Adornment="Adornment.Start" Immediate="true"
                       AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
@@ -23,7 +23,7 @@
         </TemplateColumn>
     </Columns>
     <PagerContent>
-        <MudDataGridPager T="Project" />
+        <MudDataGridPager T="BlogPost" />
     </PagerContent>
 </MudDataGrid>
 
@@ -34,14 +34,14 @@
     private bool _sortNameByLength;
     private List<string> _events = new();
     // custom sort by name length
-    private Func<Project, object> _sortBy => x => {
+    private Func<BlogPost, object> _sortBy => x => {
         if (_sortNameByLength)
             return x.Title.Length;
         else
             return x.Title;
     };
     // quick filter - filter globally across multiple columns with the same input
-    private Func<Project, bool> _quickFilter => x => {
+    private Func<BlogPost, bool> _quickFilter => x => {
         if (string.IsNullOrWhiteSpace(_searchString))
             return true;
 
@@ -52,11 +52,11 @@
     };
 
     // events
-    void RowClicked(DataGridRowClickEventArgs<Project> args) {
-        NavigationManager.NavigateTo("Admin/Projects/Edit/" + args.Item.UrlHandle);
+    void RowClicked(DataGridRowClickEventArgs<BlogPost> args) {
+        NavigationManager.NavigateTo("Admin/Blogs/Edit/" + args.Item.UrlHandle);
     }
 
-    void RowRightClicked(DataGridRowClickEventArgs<Project> args) {
+    void RowRightClicked(DataGridRowClickEventArgs<BlogPost> args) {
         _events.Insert(0, $"Event = RowRightClick, Index = {args.RowIndex}, Data = {System.Text.Json.JsonSerializer.Serialize(args.Item)}");
     }
 }
