--- a/Components/Pages/Base/About.razor
+++ b/Components/Pages/Base/About.razor
@@ -1,29 +1,47 @@
 ﻿@page "/About"
 
-<MudContainer Class="my-5">
-    <MudGrid Justify="Justify.Center">
-        <MudItem xs="12" lg="6" Class="position-relative">
-            <h1 Class="mb-3 text-center">
+<MudContainer Class="my-5 d-flex justify-center">
+    <MudContainer Class="mb-3">
+        <MudContainer>
+            <MudText Typo="Typo.h3" Class="mb-3 text-center">
                 About Me
-            </h1>
-            <div Class="mb-3 blog-details-content">
-                <div Class="mb-3">
-                    <h3>Where it All Began</h3>
-                    The worlds and challenging puzzles of video games have always captivated me. At eight years old, I embarked on my first adventure in World of Warcraft, joining my mom on her account. I vividly remember the awe I felt exploring at the forests of Ashenvale on my Night Elf priest. The towering ancient trees dripping with moss, the creatures and quests of the world made it an engaging and captivating experience I have yet to forget.
-                </div>
-                <div Class="mb-3">
-                    <h3>A Spark of Creation</h3>
-                    This love for immersive worlds only grew stronger. When I was 12, my uncle introduced me to the level editor within Warcraft 3. The possibilities ignited a spark in my mind. Suddenly, I wasn't just exploring these worlds, I was also creating them! I remember my uncle showing me the power of the WC3 editor, allowing myself to name the NPC's anything I wanted. I had just recently adopted a dog and he named a Felhound after her. The ability to create anything at my finger tips felt like magic.
-                </div>
-                <div Class="mb-3">
-                    <h3>Building and Experimenting</h3>
-                    Minecraft became another playground for my imagination. With my cousin, we loved building elaborate structures and automating tasks with redstone machines. But what truly captivated us was the modding scene. I remember the excitement of tinkering with code, attempting to create my first Minecraft mod. It may not have done much (let's be honest, it was probably a rudimentary texture swap!), but that clumsy first step introduced me to the world of programming – Java, in this case.
-                </div>
-                <div Class="mb-3">
-                    <h3>Learning and Growing</h3>
-                    From there, I dove into the world of Unity and C#. YouTube tutorials became my instructors, each lesson a stepping stone on the path to building my own games. This journey has been driven by the joy of playing games with loved ones. The camaraderie forged in epic WoW raids with my dad, the shared laughter while constructing massive structures in Minecraft with my cousin – these experiences are what truly solidified my desire to become a game developer.
-                </div>
-            </div>
-        </MudItem>
-    </MudGrid>
+            </MudText>
+        </MudContainer>
+        <MudPaper Class="my-4 px-4">
+            <MudText Class="pt-4" Align="Align.Center" Typo="Typo.h3">Where it All Began</MudText>
+            <MudText Class="my-4" Align="Align.Center" Typo="Typo.body1">
+                The worlds and challenging puzzles of video games have always captivated me. At eight years old, I embarked on my first adventure in World of Warcraft, joining my mom on her account. I vividly remember the awe I felt exploring at the forests of Ashenvale on my Night Elf priest. The towering ancient trees dripping with moss, the creatures and quests of the world made it an engaging and captivating experience I have yet to forget.
+            </MudText>
+            <MudPaper Class="d-flex justify-center">
+                <MudImage Elevation="5" Class="rounded-lg my-4" Src="https://res.cloudinary.com/djdtmbpce/image/upload/c_fill,w_250,h_250,ar_1:1/v1714589593/ashenvale_x3i3d1.jpg" />
+            </MudPaper>
+        </MudPaper>
+        <MudPaper Class="my-4 px-4">
+            <MudText Class="pt-4" Align="Align.Center" Typo="Typo.h3">A Spark of Creation</MudText>
+            <MudText Class="my-4" Align="Align.Center" Typo="Typo.body1">
+                This love for immersive worlds only grew stronger. When I was 12, my uncle introduced me to the level editor within Warcraft 3. The possibilities ignited a spark in my mind. Suddenly, I wasn't just exploring these worlds, I was also creating them! I remember my uncle showing me the power of the WC3 editor, allowing myself to name the NPC's anything I wanted. I had just recently adopted a dog and he named a Felhound after her. The ability to create anything at my finger tips felt like magic.
+            </MudText>
+            <MudPaper Class="d-flex justify-center">
+                <MudImage Elevation="5" Class="rounded-lg my-4" Src="https://res.cloudinary.com/djdtmbpce/image/upload/c_fill,w_250,h_250,ar_1:1/v1714589592/Culling_Gameplay_1_png_jpgcopy_j1cf5u.jpg" />
+            </MudPaper>
+        </MudPaper>
+        <MudPaper Class="my-4 px-4">
+            <MudText Class="pt-4" Align="Align.Center" Typo="Typo.h3">Building and Experimenting</MudText>
+            <MudText Class="my-4" Align="Align.Center" Typo="Typo.body1">
+                Minecraft became another playground for my imagination. With my cousin, we loved building elaborate structures and automating tasks with redstone machines. But what truly captivated us was the modding scene. I remember the excitement of tinkering with code, attempting to create my first Minecraft mod. It may not have done much (let's be honest, it was probably a rudimentary texture swap!), but that clumsy first step introduced me to the world of programming – Java, in this case.
+            </MudText>
+            <MudPaper Class="d-flex justify-center">
+                <MudImage Elevation="5" Class="rounded-lg my-4" Src="https://res.cloudinary.com/djdtmbpce/image/upload/c_fill,w_250,h_250,ar_1:1/v1714589772/minecraft_lfonn9.jpg" />
+            </MudPaper>
+        </MudPaper>
+        <MudPaper Class="my-4 px-4">
+            <MudText Class="pt-4" Align="Align.Center" Typo="Typo.h3">Learning and Growing</MudText>
+            <MudText Class="my-4" Align="Align.Center" Typo="Typo.body1">
+                From there, I dove into the world of Unity and C#. YouTube tutorials became my instructors, each lesson a stepping stone on the path to building my own games. This journey has been driven by the joy of playing games with loved ones. The camaraderie forged in epic WoW raids with my dad, the shared laughter while constructing massive structures in Minecraft with my cousin – these experiences are what truly solidified my desire to become a game developer.
+            </MudText>
+            <MudPaper Class="d-flex justify-center">
+                <MudImage Elevation="5" Class="rounded-lg my-4" Src="https://res.cloudinary.com/djdtmbpce/image/upload/c_fill,w_250,h_250,ar_1:1,g_auto/v1714589772/together_hbc7xi.jpg" />
+            </MudPaper>
+        </MudPaper>
+    </MudContainer>
 </MudContainer>
