--- a/Components/Pages/Base/Resume.razor
+++ b/Components/Pages/Base/Resume.razor
@@ -1,17 +1,17 @@
 ﻿@page "/Resume"
 
-<div class="container my-5">
-    <div>
+<MudContainer Class="container my-5">
+    <MudContainer>
         <div class="d-flex mb-3 justify-content-end">
             <div class="align-content-center">
                 <a href="https://onedrive.live.com/download?resid=324C3E78566D9F53%2152807&authkey=!AHXgtazQR54FMWI&em=2" class="btn btn-primary">Download</a>
             </div>
         </div>
-    </div>
+    </MudContainer>
     <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1XKmXbyYVlr8QnR6vtiWb75HMgya9XKL0TjZ15y-dc80&font=Default&lang=en&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
     <div class="d-flex justify-content-center">
-        <div class="col-12 col-lg-6 d-flex justify-content-center">
-            <div class="mb-3 blog-details-content">
+        <div class="col-12 d-flex justify-content-center">
+            <div class="mb-3">
                 <div class="container py-4">
                     <div class="row justify-content-center">
                         <div class="col-md-8">
@@ -118,4 +118,4 @@
             </div>
         </div>
     </div>
-</div>
+</MudContainer>
