--- a/Components/Pages/Admin/TagCreate.razor
+++ b/Components/Pages/Admin/TagCreate.razor
@@ -1,8 +1,8 @@
-﻿@page "/Admin/Tags/Create/{UrlHandle}"
+﻿@page "/Admin/Tags/Edit/{UrlHandle}"
 
 <EditForm Model="@Tag" OnValidSubmit="@HandleSubmit">
   <MudText Typo="Typo.h2">Name:</MudText>
     <MudInput Variant="Variant.Filled" @bind-Value="@Tag.Name" Text="@Tag.Name" />
 
-    <MudButton Class="mb-16" FullWidth="true" Variant="Variant.Filled" Color="Color.Primary" ButtonType="ButtonType.Submit">Save Changes</MudButton>
+    <MudButton Class="mb-16" FullWidth="true" Variant="Variant.Filled" Color="Color.Primary" ButtonType="ButtonType.Submit">Create Tag</MudButton>
 </EditForm>
