Fix Blog/Project loading independently & Add CRUD

--- a/Components/Pages/Admin/BlogEditIndex.razor
+++ b/Components/Pages/Admin/BlogEditIndex.razor
@@ -1,11 +1,44 @@
 ﻿@page "/Admin/Blogs/Edit/{UrlHandle}"
+@attribute [Authorize(Roles = "Admin")]
 
 <EditForm Model="@BlogPost" OnValidSubmit="@HandleSubmit">
-  <MudText Typo="Typo.h2">Title:</MudText>
-  <MudInput Variant="Variant.Filled" @bind-Value="@BlogPost.Title" Text="@BlogPost.Title" />
+    <MudText Typo="Typo.h2">Title:</MudText>
+    <MudInput Variant="Variant.Filled" @bind-Value="@BlogPost.Title" />
 
-  <MudText Typo="Typo.h2">Content:</MudText>
-  <MudTextField Class="pb-16" @bind-Value="BlogPost.Content" T="string" Label="Outlined" Variant="Variant.Outlined" Text="@BlogPost.Content" Lines="100" />
+    <MudText Typo="Typo.h2">Content:</MudText>
+    <MudTextField Class="pb-16" @bind-Value="BlogPost.Content" T="string" Label="Outlined" Variant="Variant.Outlined" Lines="50" />
 
-    <MudButton Class="mb-16" FullWidth="true" Variant="Variant.Filled" Color="Color.Primary" ButtonType="ButtonType.Submit">Save Changes</MudButton>
+    <MudText Typo="Typo.h3">Description:</MudText>
+    <MudTextField @bind-Value="@BlogPost.Description" Lines="5" Label="Short description of the post" />
+
+    <MudText Typo="Typo.h3">Featured Image URL:</MudText>
+    <MudTextField @bind-Value="@BlogPost.FeaturedImageUrl" Label="URL of the featured image" />
+
+    <MudText Typo="Typo.h3">URL Handle:</MudText>
+    <MudTextField @bind-Value="@BlogPost.UrlHandle" Label="Unique identifier for the URL" />
+
+    <MudText Typo="Typo.h3">Publish Date:</MudText>
+    <MudDatePicker @bind-Value="@BlogPost.PublishDate" Label="Date and time to publish" />
+
+    <MudText Typo="Typo.h3">Project:</MudText>
+    <MudSelect @bind-Value="@BlogPost.Project" Label="Select a project (optional)">
+        @foreach (var project in Projects) {
+            <MudSelectItem Value="@project">@project.Title</MudSelectItem>
+        }
+    </MudSelect>
+
+    <MudText Typo="Typo.h3">Tags:</MudText>
+    <MudSelect MultiSelectionTextFunc="@(new Func<List<string>, string>(GetMultiSelectionText))" MultiSelection="true" @bind-Value="@SelectedTag" @bind-SelectedValues="@SelectedTags" Label="Select Tags (optional)">
+        @foreach (var tag in Tags) {
+            <MudSelectItem Value="tag">@tag.Name</MudSelectItem>
+        }
+    </MudSelect>
+
+    <MudText Typo="Typo.h3">Visibility:</MudText>
+    <MudSwitch @bind-Value="@BlogPost.Visible" Label="Make post publicly visible" Color="Color.Primary" />
+
+    <MudText Typo="Typo.h3">Featured:</MudText>
+    <MudSwitch @bind-Value="@BlogPost.Featured" Label="Highlight post on homepage" Color="Color.Primary" />
+
+    <MudButton Class="mb-16" FullWidth="true" Variant="Variant.Filled" Color="Color.Primary" ButtonType="ButtonType.Submit">Update Post</MudButton>
 </EditForm>
