--- a/Components/Pages/Base/Home.razor
+++ b/Components/Pages/Base/Home.razor
@@ -1,4 +1,4 @@
-﻿    @page "/"
+﻿@page "/"
 @using TrustyPortfolio.Components.Components
 
 <PageTitle>Home</PageTitle>
@@ -11,7 +11,7 @@
         <div class="col-12 col-lg-6">
             <MudText Typo="Typo.h2">Hi! My name is Ryan!</MudText>
             <MudContainer Class="mt-6">
-                <MudText Typo="Typo.h6">Welcome to my Trusty Portfolio!</MudText>
+                <MudText Typo="Typo.h6">I'm a Game Developer!</MudText>
             </MudContainer>
         </div>
         <div class="col-12 col-lg-6">
