--- a/Components/Pages/Admin/TagCreate.razor
+++ b/Components/Pages/Admin/TagCreate.razor
@@ -1,4 +1,5 @@
-﻿@page "/Admin/Tags/Edit/{UrlHandle}"
+﻿@page "/Admin/Tags/Create"
+@attribute [Authorize(Roles = "Admin")]
 
 <EditForm Model="@Tag" OnValidSubmit="@HandleSubmit">
   <MudText Typo="Typo.h2">Name:</MudText>
