--- a/Components/Pages/Admin/TagEdit.razor
+++ b/Components/Pages/Admin/TagEdit.razor
@@ -1,8 +1,9 @@
 ﻿@page "/Admin/Tags/Edit"
 @attribute [Authorize(Roles = "Admin")]
+@inject IDialogService DialogService
 
 <MudDataGrid T="Tag" MultiSelection="true" Items="PortfolioData.Tags" SortMode="SortMode.Multiple" Filterable="true" QuickFilter="@_quickFilter"
-             Hideable="true" RowClick="@RowClicked" RowContextMenuClick="RowRightClicked">
+             Hideable="true" RowClick="@RowClicked">
     <ToolBarContent>
         <MudText Typo="Typo.h6">Tags</MudText>
         <MudSpacer />
@@ -14,7 +15,7 @@
         <TemplateColumn>
             <CellTemplate>
                 <MudStack Row>
-                    <MudButton Size="@Size.Small" Variant="@Variant.Filled" Color="@Color.Primary">Delete</MudButton>
+                    <MudButton Size="@Size.Small" Variant="@Variant.Filled" Color="@Color.Primary" @onclick="@((e) => { _ = ShowConfirmationDialog(context.Item.Id); })">Delete</MudButton>
                 </MudStack>
             </CellTemplate>
         </TemplateColumn>
@@ -27,6 +28,7 @@
 @code {
     [CascadingParameter] PortfolioData PortfolioData { get; set; }
     [Inject] NavigationManager NavigationManager { get; set; }
+    [Inject] ITagRepository TagRepository { get; set; }
     private string _searchString;
     private bool _sortNameByLength;
     private List<string> _events = new();
@@ -52,8 +54,14 @@
     void RowClicked(DataGridRowClickEventArgs<Tag> args) {
         NavigationManager.NavigateTo("Admin/Tags/Edit/" + args.Item.Id);
     }
+    async Task ShowConfirmationDialog(Guid tagId) {
+        var tag = PortfolioData.Tags.FirstOrDefault(x => x.Id == tagId);
+        var parameters = new DialogParameters<DeleteTagConfirmation> { { x => x.Tag, tag } };
+        var dialog = await DialogService.ShowAsync<DeleteTagConfirmation>($"Delete {tag?.Name}?", parameters);
+        var result = await dialog.Result;
 
-    void RowRightClicked(DataGridRowClickEventArgs<Tag> args) {
-        _events.Insert(0, $"Event = RowRightClick, Index = {args.RowIndex}, Data = {System.Text.Json.JsonSerializer.Serialize(args.Item)}");
+        if (!result.Canceled) {
+            await TagRepository.DeleteAsync(tagId);
+        }
     }
 }
