--- a/Components/Pages/Admin/TagEditIndex.razor
+++ b/Components/Pages/Admin/TagEditIndex.razor
@@ -1,4 +1,5 @@
-﻿@page "/Admin/Tags/Create/{UrlHandle}"
+﻿@page "/Admin/Tags/Edit/{UrlHandle}"
+@attribute [Authorize(Roles = "Admin")]
 
 <EditForm Model="@Tag" OnValidSubmit="@HandleSubmit">
   <MudText Typo="Typo.h2">Name:</MudText>
