--- a/Components/Pages/Base/Resume.razor
+++ b/Components/Pages/Base/Resume.razor
@@ -42,7 +42,7 @@
                                 <div class="row">
                                     <div class="col-md-12 mb-4">
                                         <h4>University of Phoenix, Phoenix, Arizona (Online)</h4>
-                                        <p>Bachelor of Computer Science - GPA: 3.5 (Expected Graduation: 2025)</p>
+                                        <p>Bachelor of Computer Science | 2022 - 2024 </p>
                                         <ul>
                                             <li>Data Programming Languages</li>
                                             <li>Java Programming I</li>
@@ -52,7 +52,7 @@
                                     </div>
                                     <div class="col-md-12 mb-4">
                                         <h4>California State University, San Bernardino, California</h4>
-                                        <p>Studies toward Computer Science (2016-2018)</p>
+                                        <p>Studies toward Computer Science | 2016-2018 </p>
                                         <ul>
                                             <li>Led a team of 3 in creating a 2D platformer with C# and the Unity Engine.</li>
                                         </ul>
